--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "expo": "~49.0.8",
     "expo-font": "~11.4.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "styled-components": "^6.0.7",
-    "expo-splash-screen": "~0.20.5",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-signature-canvas": "^4.6.1",
+    "react-native-svg": "13.9.0",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
