--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-signature-canvas": "^4.6.1",
     "react-native-svg": "13.9.0",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
