--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "axios": "^1.5.0",
     "expo": "~49.0.8",
+    "expo-auth-session": "~5.0.2",
+    "expo-crypto": "~12.4.1",
     "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-signature-canvas": "^4.6.1",
     "react-native-svg": "13.9.0",
-    "styled-components": "^6.0.7",
-    "react-native-screens": "~3.22.0",
-    "expo-auth-session": "~5.0.2",
-    "expo-crypto": "~12.4.1",
-    "expo-web-browser": "~12.3.2"
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
