--- a/app.json
+++ b/app.json
@@ -26,6 +26,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "scheme": "apptecredirect"
+    "scheme": "dev.fsantana.apptec"
   }
 }
