--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-signature-canvas": "^4.6.1",
     "react-native-svg": "13.9.0",
     "styled-components": "^6.0.7",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
