--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-svg": "13.9.0",
     "styled-components": "^6.0.7",
     "yup": "^1.2.0",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
