--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "styled-components": "^6.0.7",
     "yup": "^1.2.0",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-webview": "13.2.2"
+    "react-native-webview": "13.2.2",
+    "expo-build-properties": "~0.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
